--- a/package.json
+++ b/package.json
@@ -8,12 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "next": "11.1.2",
+    "next-auth": "^4.0.0-beta.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "@types/cookie": "^0.4.1",
     "@types/react": "17.0.22",
+    "autoprefixer": "^10.3.4",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.6",
+    "sass": "^1.42.0",
+    "tailwindcss": "^2.2.15",
     "typescript": "4.4.3"
   }
 }
