--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "cookie": "^0.4.1",
     "next": "11.1.2",
     "next-auth": "^4.0.0-beta.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.1",
