--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "cookie": "^0.4.1",
     "next": "11.1.2",
     "next-auth": "^4.0.0-beta.2",
@@ -22,12 +23,12 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@types/cookie": "^0.4.1",
-    "@types/react": "17.0.22",
-    "autoprefixer": "^10.3.4",
+    "@types/react": "17.0.24",
+    "autoprefixer": "^10.3.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "postcss": "^8.3.6",
-    "sass": "^1.42.0",
+    "postcss": "^8.3.7",
+    "sass": "^1.42.1",
     "tailwindcss": "^2.2.15",
     "typescript": "4.4.3"
   }
