--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
     "next": "11.1.2",
-    "next-auth": "^4.0.0-beta.2",
+    "next-auth": "4.0.0-beta.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.29.1",
     "swr": "^1.0.1"
   },
   "devDependencies": {
